<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	<!-- Title -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="78"
        android:background="@drawable/pannel_general_info"
        android:orientation="vertical" >

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:layout_gravity="center"
              android:layout_marginBottom="5dp"
              android:layout_marginTop="5dp"
              android:gravity="center"
              android:shadowColor="#7f000000"
              android:shadowDx="2"
              android:shadowDy="2"
              android:shadowRadius="1"
              android:text="@string/shop_my_shop_title"
              android:textColor="@android:color/white"
              android:textSize="26sp"
              android:textStyle="bold" />

    </LinearLayout>
	<!-- search -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="150" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            
            android:orientation="vertical" >

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="horizontal" >

             <TextView
                
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:text="@string/shop_search_shop_text_view" />
             
             <EditText
                 android:id="@+id/edittext_shop_search"
                 android:layout_width="154dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="2dp"
                 android:ems="10"
                 android:singleLine="true" >
				
                 <requestFocus />
             </EditText>
             
         </LinearLayout>

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="horizontal" >

             <TextView
                
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:hint="@string/shop_all_shop_text_view"
                 android:text="@string/shop_all_shop_text_view" />

             <Button
                 android:layout_width="104dp"
                 android:layout_height="33dp"
                 android:layout_marginBottom="2dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="2dp"
                 android:background="@drawable/main_button_search"
                 android:text="@string/shop_search_button_txt"
                 android:textColor="@color/white" />

         </LinearLayout>
          
    </LinearLayout>

        <TextView
            android:id="@+id/text_view_shop_updata_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="right|center_vertical"
            android:text="数据更新至:\n10月30日\n00:10:10"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RelativeLayout>
   
     

         <FrameLayout
             android:id="@+id/Layout_id_map_pannel"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="2dp"
             android:layout_weight="585"
             android:background="@drawable/pannel_general_info" >
         
              <FrameLayout
		            android:id="@+id/id_map_pannel"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent" />
              
		        <Button
		            android:id="@+id/map_location_request"
		            android:layout_width="40dp"
		            android:layout_height="40dp"
		            android:layout_gravity="top|right"
		            android:background="@drawable/map_custom_loc" />
			</FrameLayout>

      <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="162" >       
          
          <ImageView
              android:layout_width="match_parent"
              android:layout_height="40dp"
              android:layout_gravity="bottom"
              android:background="@drawable/pannel_general_info"
              android:orientation="vertical"
              android:scaleType="fitCenter" />

 		  <LinearLayout
 		      android:id="@+id/id_main_select_item"
 		      android:layout_width="match_parent"
 		      android:layout_height="match_parent"
 		      android:contentDescription="@string/app_name"
 		      android:orientation="horizontal" >
 		  </LinearLayout>

    </FrameLayout>

</LinearLayout>
